{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 18,
  "lineage": "062de4b2-ae37-14ad-1c84-6c4278f3642c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "2846",
                  "5462"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-30T20:37:26.673-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cr460devoir1/global/firewalls/internal-control",
            "log_config": [],
            "name": "internal-control",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "priority": 1000,
            "project": "cr460devoir1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/firewalls/internal-control",
            "source_ranges": [
              "10.0.1.0/24",
              "172.16.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-30T20:37:26.686-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cr460devoir1/global/firewalls/ssh-public",
            "log_config": [],
            "name": "ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "priority": 1000,
            "project": "cr460devoir1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/firewalls/ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-30T20:37:26.625-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cr460devoir1/global/firewalls/ssh-workload",
            "log_config": [],
            "name": "ssh-workload",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "priority": 1000,
            "project": "cr460devoir1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/firewalls/ssh-workload",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "workload"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-30T20:37:26.669-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cr460devoir1/global/firewalls/web-public",
            "log_config": [],
            "name": "web-public",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "priority": 1000,
            "project": "cr460devoir1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/firewalls/web-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/etcd1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/etcd1",
            "instance_id": "7405508705591554529",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "O3EmveARzU4=",
            "name": "etcd1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "10.0.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-backend",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/etcd1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/etcd2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/etcd2",
            "instance_id": "242742023215968737",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "O3EmveARzU4=",
            "name": "etcd2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "10.0.3.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-backend",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/etcd2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "etcd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/etcd3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/etcd3",
            "instance_id": "759850875859038689",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "O3EmveARzU4=",
            "name": "etcd3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "10.0.3.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-backend",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/etcd3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/jump"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/jump",
            "instance_id": "1311624173324923361",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1Ca1K35OqRE=",
            "metadata_startup_script": "apt-get -y update \u0026\u0026 apt-get -y upgrade \u0026\u0026 apt-get -y install apache2 \u0026\u0026 systemctl start apache2",
            "name": "jump",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.89.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "172.16.3.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-dmz",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/jump",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/master",
            "instance_id": "5270870136542786017",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "O3EmveARzU4=",
            "name": "master",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "10.0.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-workload",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "workload"
            ],
            "tags_fingerprint": "5EUpivCzoVY=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/disks/vault"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cr460devoir1/zones/us-east1-c/instances/vault",
            "instance_id": "3137905187400249825",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "O3EmveARzU4=",
            "name": "vault",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.237.163.117",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
                "network_ip": "172.16.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-dmz",
                "subnetwork_project": "cr460devoir1"
              }
            ],
            "project": "cr460devoir1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/zones/us-east1-c/instances/vault",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cr460devoir1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cr460devoir1/global/networks/cr460devoir1",
            "name": "cr460devoir1",
            "project": "cr460devoir1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-30T20:37:27.564-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/cr460devoir1/regions/us-east1/subnetworks/prod-backend",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "prod-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "private_ip_google_access": false,
            "project": "cr460devoir1",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-backend"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-30T20:37:26.988-07:00",
            "gateway_address": "172.16.3.1",
            "id": "projects/cr460devoir1/regions/us-east1/subnetworks/prod-dmz",
            "ip_cidr_range": "172.16.3.0/24",
            "name": "prod-dmz",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "private_ip_google_access": false,
            "project": "cr460devoir1",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-dmz"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-30T20:37:27.667-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/cr460devoir1/regions/us-east1/subnetworks/prod-internal",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "prod-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "private_ip_google_access": false,
            "project": "cr460devoir1",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-internal"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-30T20:37:27.809-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/cr460devoir1/regions/us-east1/subnetworks/prod-workload",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "prod-workload",
            "network": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/global/networks/cr460devoir1",
            "private_ip_google_access": false,
            "project": "cr460devoir1",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cr460devoir1/regions/us-east1/subnetworks/prod-workload"
          },
          "dependencies": [
            "google_compute_network.cr460devoir1"
          ]
        }
      ]
    }
  ]
}